--- a/.github/workflows/lint-validation.yml
+++ b/.github/workflows/lint-validation.yml
@@ -7,6 +7,9 @@ on:
       lint-success:
         description: "Indicates if linting passed"
         value: ${{ jobs.lint.outputs.lint-success }}
+      build-cache-key:
+        description: "The build cache key to use in subsequent jobs"
+        value: ${{ jobs.lint.outputs.build-cache-key }}
   
   # Also allow manual triggering for debugging
   workflow_dispatch:
@@ -19,6 +22,7 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       lint-success: ${{ steps.lint-validation.outputs.success }}
+      build-cache-key: ${{ steps.build-cache.outputs.cache-key }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -34,8 +38,26 @@ jobs:
       - name: Install dependencies
         run: npm ci --ignore-scripts
         
+      # Cache the node_modules and build output
+      - name: Cache node_modules and build
+        id: cache-build
+        uses: actions/cache@v3
+        with:
+          path: |
+            node_modules
+            lib
+          key: ${{ runner.os }}-build-${{ hashFiles('**/package-lock.json') }}-${{ github.sha }}
+          restore-keys: |
+            ${{ runner.os }}-build-${{ hashFiles('**/package-lock.json') }}-
+            ${{ runner.os }}-build-
+            
       - name: Build project
         run: npm run build
+        
+      # Save cache info for later jobs
+      - name: Set build cache outputs
+        id: build-cache
+        run: echo "cache-key=${{ runner.os }}-build-${{ hashFiles('**/package-lock.json') }}-${{ github.sha }}" >> $GITHUB_OUTPUT
       
       - name: Run linting
         id: lint-validation
