--- a/.github/workflows/test-validation.yml
+++ b/.github/workflows/test-validation.yml
@@ -3,6 +3,11 @@ name: Validate No Test Failures
 on:
   # Only run via workflow_call to ensure linting runs first
   workflow_call:
+    inputs:
+      build-cache-key:
+        description: "The build cache key from the lint job"
+        type: string
+        required: false
     outputs:
       test-success:
         description: "Indicates if tests passed"
@@ -34,7 +39,22 @@ jobs:
       - name: Install dependencies
         run: npm ci --ignore-scripts
         
-      - name: Build project
+      # Try to restore build cache from lint job
+      - name: Restore build cache
+        id: restore-build
+        uses: actions/cache@v3
+        with:
+          path: |
+            node_modules
+            lib
+          key: ${{ inputs.build-cache-key || 'no-cache-' }}
+          restore-keys: |
+            ${{ runner.os }}-build-${{ hashFiles('**/package-lock.json') }}-
+            ${{ runner.os }}-build-
+            
+      # Only build if cache restoration failed
+      - name: Build project (if needed)
+        if: steps.restore-build.outputs.cache-hit != 'true'
         run: npm run build
       
       - name: Run tests
