--- a/.github/workflows/lint-validation.yml
+++ b/.github/workflows/lint-validation.yml
@@ -3,13 +3,15 @@ name: Validate No Linting Errors
 on:
   # Only run via workflow_call to ensure commit validation runs first
   workflow_call:
+    inputs:
+      build-cache-key:
+        description: "The build cache key from the build job"
+        type: string
+        required: false
     outputs:
       lint-success:
         description: "Indicates if linting passed"
         value: ${{ jobs.lint.outputs.lint-success }}
-      build-cache-key:
-        description: "The build cache key to use in subsequent jobs"
-        value: ${{ jobs.lint.outputs.build-cache-key }}
   
   # Also allow manual triggering for debugging
   workflow_dispatch:
@@ -22,7 +24,6 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       lint-success: ${{ steps.lint-validation.outputs.success }}
-      build-cache-key: ${{ steps.build-cache.outputs.cache-key }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -35,29 +36,28 @@ jobs:
           node-version: '20.x'
           cache: 'npm'
           
-      - name: Install dependencies
-        run: npm ci --ignore-scripts
-        
-      # Cache the node_modules and build output
-      - name: Cache node_modules and build
-        id: cache-build
+      # Restore build cache from previous job
+      - name: Restore build cache
+        id: restore-build
         uses: actions/cache@v3
         with:
           path: |
             node_modules
             lib
-          key: ${{ runner.os }}-build-${{ hashFiles('**/package-lock.json') }}-${{ github.sha }}
+          key: ${{ inputs.build-cache-key || 'no-cache-' }}
           restore-keys: |
             ${{ runner.os }}-build-${{ hashFiles('**/package-lock.json') }}-
             ${{ runner.os }}-build-
-            
-      - name: Build project
+      
+      # Install dependencies only if cache miss
+      - name: Install dependencies 
+        if: steps.restore-build.outputs.cache-hit != 'true'
+        run: npm ci --ignore-scripts
+      
+      # Build project only if cache miss
+      - name: Build project (if needed)
+        if: steps.restore-build.outputs.cache-hit != 'true'
         run: npm run build
-        
-      # Save cache info for later jobs
-      - name: Set build cache outputs
-        id: build-cache
-        run: echo "cache-key=${{ runner.os }}-build-${{ hashFiles('**/package-lock.json') }}-${{ github.sha }}" >> $GITHUB_OUTPUT
       
       - name: Run linting
         id: lint-validation
