--- a/.github/workflows/pr-validation.yml
+++ b/.github/workflows/pr-validation.yml
@@ -20,26 +20,37 @@ jobs:
     with:
       force-new-run: ${{ github.event_name == 'pull_request' && github.event.action == 'edited' }}
   
-  # Second step: validate commit messages
-  validate-commits:
+  # Second step: build the project
+  build:
     needs: [check-target]
     # Run if target is valid
     if: ${{ needs.check-target.outputs.target-valid == 'true' }}
-    uses: ./.github/workflows/validate-commits.yml
+    uses: ./.github/workflows/build-validation.yml
   
-  # Third step: run linting checks only if commits pass validation
+  # Third step: validate commit messages (using build cache)
+  validate-commits:
+    needs: [build]
+    # Run if build passed
+    if: ${{ needs.build.outputs.build-success == 'true' }}
+    uses: ./.github/workflows/validate-commits.yml
+    with:
+      build-cache-key: ${{ needs.build.outputs.build-cache-key }}
+  
+  # Fourth step: run linting checks (using build cache)
   lint:
-    needs: [validate-commits]
+    needs: [build, validate-commits]
     # Run if commits validation passed
     if: ${{ needs.validate-commits.outputs.validation-success == 'true' }}
     uses: ./.github/workflows/lint-validation.yml
+    with:
+      build-cache-key: ${{ needs.build.outputs.build-cache-key }}
   
-  # Fourth step: run tests only if linting passes
+  # Fifth step: run tests (using build cache)
   test:
-    needs: [lint]
+    needs: [build, lint]
     # Run if lint passed
     if: ${{ needs.lint.outputs.lint-success == 'true' }}
     uses: ./.github/workflows/test-validation.yml
     with:
-      build-cache-key: ${{ needs.lint.outputs.build-cache-key }}
+      build-cache-key: ${{ needs.build.outputs.build-cache-key }}
   
