--- a/.github/workflows/test-validation.yml
+++ b/.github/workflows/test-validation.yml
@@ -36,10 +36,7 @@ jobs:
           node-version: '20.x'
           cache: 'npm'
           
-      - name: Install dependencies
-        run: npm ci --ignore-scripts
-        
-      # Try to restore build cache from lint job
+      # Try to restore build cache from build job
       - name: Restore build cache
         id: restore-build
         uses: actions/cache@v3
@@ -52,6 +49,11 @@ jobs:
             ${{ runner.os }}-build-${{ hashFiles('**/package-lock.json') }}-
             ${{ runner.os }}-build-
             
+      # Install dependencies only if cache miss
+      - name: Install dependencies 
+        if: steps.restore-build.outputs.cache-hit != 'true'
+        run: npm ci --ignore-scripts
+        
       # Only build if cache restoration failed
       - name: Build project (if needed)
         if: steps.restore-build.outputs.cache-hit != 'true'
