--- a/.github/workflows/validate-commits.yml
+++ b/.github/workflows/validate-commits.yml
@@ -33,7 +33,7 @@ jobs:
           node-version: '20.x'
           cache: 'npm'
           
-      # Restore build cache from previous job
+      # Restore build cache from previous job - must exist
       - name: Restore build cache
         id: restore-build
         uses: actions/cache@v3
@@ -42,22 +42,14 @@ jobs:
             node_modules
             lib
           key: ${{ inputs.build-cache-key }}
-          restore-keys: |
-            ${{ runner.os }}-build-${{ hashFiles('**/package-lock.json') }}-
-            ${{ runner.os }}-build-
-      
-      # Debug information about cache status
-      - name: Cache Diagnostics
-        run: |
-          echo "Cache hit: ${{ steps.restore-build.outputs.cache-hit }}"
-          echo "Cache key: ${{ inputs.build-cache-key }}"
-          ls -la node_modules || echo "No node_modules"
-          ls -la lib || echo "No lib"
-      
-      # Install dependencies only if cache miss
-      - name: Install dependencies 
+          
+      # Fail the job if cache restoration failed
+      - name: Verify cache
         if: steps.restore-build.outputs.cache-hit != 'true'
-        run: npm ci --ignore-scripts
+        run: |
+          echo "::error::Build cache restoration failed! This should not happen."
+          echo "Cache key: ${{ inputs.build-cache-key }}"
+          exit 1
       
       # Use existing commitlint config from repo
       - name: Validate PR commits with commitlint
