--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,40 +6,9 @@ on:
       - next
 
 jobs:
-  # First job for testing
-  test:
-    name: Test
-    runs-on: ubuntu-latest
-    permissions:
-      contents: read
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-      
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: 'lts/*'
-          cache: 'npm'
-      
-      - name: Install dependencies
-        run: npm ci
-      
-      - name: Run linting
-        run: npm run lint:dry || true
-      
-      - name: Build
-        run: npm run build
-      
-      - name: Run tests
-        run: npm test
-
-  # Second job for release (depends on test job passing)
+  # Direct release job (skipping tests as they've already been run in PR validation)
   release:
     name: Release
-    needs: test
     runs-on: ubuntu-latest
     permissions:
       contents: write
@@ -72,6 +41,17 @@ jobs:
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
       
+      - name: Set Release Type
+        id: release-type
+        run: |
+          if [[ "${{ github.ref }}" == "refs/heads/main" ]]; then
+            echo "Running production release from main branch"
+            echo "type=production" >> $GITHUB_OUTPUT
+          else
+            echo "Running pre-release from next branch"
+            echo "type=prerelease" >> $GITHUB_OUTPUT
+          fi
+      
       - name: Release
         env:
           # Use GH_TOKEN for GitHub operations (both Git and API)
@@ -80,4 +60,6 @@ jobs:
           # Use NPM_TOKEN for npm publishing
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+          # Pass release type information
+          RELEASE_TYPE: ${{ steps.release-type.outputs.type }}
         run: npx semantic-release
