--- a/.github/workflows/promote-to-main.yml
+++ b/.github/workflows/promote-to-main.yml
@@ -22,7 +22,8 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          token: ${{ secrets.GH_TOKEN || secrets.GITHUB_TOKEN }}
+          # Use deploy key for git operations to bypass branch protection
+          ssh-key: ${{ secrets.DEPLOY_KEY }}
       
       - name: Set Git identity
         run: |
