--- a/.github/workflows/release-next-package.yml
+++ b/.github/workflows/release-next-package.yml
@@ -23,8 +23,8 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          # Use GH_TOKEN for both git operations and GitHub API
-          token: ${{ secrets.GH_TOKEN || secrets.GITHUB_TOKEN }}
+          # Use deploy key for git operations to bypass branch protection
+          ssh-key: ${{ secrets.DEPLOY_KEY }}
       
       - name: Setup Node.js
         uses: actions/setup-node@v4
@@ -65,9 +65,8 @@ jobs:
 
       - name: Release
         env:
-          # Use GH_TOKEN for GitHub operations (both Git and API)
-          GITHUB_TOKEN: ${{ secrets.GH_TOKEN || secrets.GITHUB_TOKEN }}
-          GH_TOKEN: ${{ secrets.GH_TOKEN || secrets.GITHUB_TOKEN }}
+          # Use GH_TOKEN for API operations (the git operations will use the deploy key)
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
           # Use NPM_TOKEN for npm publishing
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
