--- a/.github/workflows/revalidate-pr.yml
+++ b/.github/workflows/revalidate-pr.yml
@@ -22,7 +22,7 @@ jobs:
         id: pr_info
         uses: actions/github-script@v6
         with:
-          github-token: ${{ secrets.GH_TOKEN }}
+          token: ${{ secrets.GH_TOKEN }}
           script: |
             const pr = await github.rest.pulls.get({
               owner: context.repo.owner,
@@ -40,7 +40,7 @@ jobs:
       - name: Add comment to PR
         uses: actions/github-script@v6
         with:
-          github-token: ${{ secrets.GH_TOKEN }}
+          token: ${{ secrets.GH_TOKEN }}
           script: |
             const prInfo = ${{ steps.pr_info.outputs.result }};
             
