--- a/.releaserc.json
+++ b/.releaserc.json
@@ -13,7 +13,8 @@
     "@semantic-release/npm",
     ["@semantic-release/git", {
       "assets": ["package.json", "CHANGELOG.md"],
-      "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
+      "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}",
+      "repositoryUrl": "git@github.com:zjayers/assemblejs.git"
     }],
     "@semantic-release/github"
   ]
