--- a/.github/workflows/release-next-package.yml
+++ b/.github/workflows/release-next-package.yml
@@ -71,6 +71,15 @@ jobs:
         env:
           # Use GH_TOKEN for API operations (the git operations will use the deploy key)
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          # Force semantic-release to use SSH instead of HTTPS
+          USE_SSH_KEY: true
+          # Force semantic-release git plugin to use SSH URL
+          GIT_AUTHOR_NAME: "github-actions[bot]"
+          GIT_AUTHOR_EMAIL: "github-actions[bot]@users.noreply.github.com"
+          GIT_COMMITTER_NAME: "github-actions[bot]"
+          GIT_COMMITTER_EMAIL: "github-actions[bot]@users.noreply.github.com"
+          # Set SSH repository URL explicitly
+          GIT_REPOSITORY_URL: "git@github.com:zjayers/assemblejs.git"
           # Use NPM_TOKEN for npm publishing
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
@@ -78,4 +87,8 @@ jobs:
           RELEASE_TYPE: ${{ steps.release-type.outputs.type }}
           # Skip git hooks during semantic-release
           HUSKY: 0
-        run: npx semantic-release --no-ci-skip
+        run: |
+          # Ensure SSH is using the correct key
+          ssh-add -l
+          # Run semantic-release with verbose flag to see what's happening
+          npx semantic-release --no-ci-skip --debug
