--- a/package.json
+++ b/package.json
@@ -109,7 +109,8 @@
     "reboot:global": "npm i -g ./asmbl-$npm_package_version.tgz --no-cache --check-files --no-warnings --quiet --loglevel=error",
     "git:update": "git add . && git commit -m \"chore: update\" && git push",
     "git:update:force": "git add . && git commit -m \"chore: update\" && git push --force",
-    "semantic-release": "semantic-release",
+    "publish:npm": "npm publish",
+    "publish:npm:next": "npm publish --tag next",
     "version:patch": "HUSKY=0 npm run generate:changelog && HUSKY=0 npm version patch -m \"chore(release): %s [skip ci]\" --force && git add CHANGELOG.md",
     "version:minor": "HUSKY=0 npm run generate:changelog && HUSKY=0 npm version minor -m \"chore(release): %s [skip ci]\" --force && git add CHANGELOG.md",
     "version:major": "HUSKY=0 npm run generate:changelog && HUSKY=0 npm version major -m \"chore(release): %s [skip ci]\" --force && git add CHANGELOG.md",
@@ -204,9 +205,6 @@
   "devDependencies": {
     "@commitlint/cli": "^17.0.3",
     "@commitlint/config-conventional": "^17.0.3",
-    "@semantic-release/changelog": "^6.0.3",
-    "@semantic-release/git": "^10.0.1",
-    "@semantic-release/npm": "^12.0.1",
     "@types/babelify": "^7.3.7",
     "@types/browserify": "^12.0.37",
     "@types/date-and-time": "0.13.0",
@@ -244,7 +242,6 @@
     "npm-run-all": "4.1.5",
     "prettier": "2.7.1",
     "replace-in-file": "^6.3.5",
-    "semantic-release": "^24.2.3",
     "serve": "^14.0.1",
     "shx": "^0.3.4",
     "terser": "^5.14.2",
