--- a/.github/workflows/deploy-next-website.yml
+++ b/.github/workflows/deploy-next-website.yml
@@ -6,7 +6,7 @@ on:
     branches:
       - next
     paths:
-      - 'websites/assemblejs/**'
+      - 'websites/www.assemblejs.com/**'
       - 'docs/**'
   
   # Manual trigger
@@ -57,6 +57,6 @@ jobs:
           
           # Deploy to root of next bucket
           echo "Deploying to s3://$S3_BUCKET/"
-          aws s3 sync "websites/assemblejs/dist/" "s3://$S3_BUCKET/" --delete
+          aws s3 sync "websites/www.assemblejs.com/" "s3://$S3_BUCKET/" --delete
           
           echo "🚀 AssembleJS next website successfully deployed to www.next.assemblejs.com"
